# data-visualization-workshop

./: .gitignore  NOTICE  README.md  pyproject.toml  requirements.txt
assets/images/libraries/matplotlib/: ATTRIBUTION.md
assets/images/libraries/plotly/: ATTRIBUTION.md
assets/images/libraries/seaborn/: ATTRIBUTION.md
code/matplotlib/: 01-introduction.ipynb  02-basic-plotting.ipynb  02-core-plots.ipynb  03-customization.ipynb  03-styling-plots.ipynb  04-advanced-layouts.ipynb  04-subplots.ipynb  05-specialized-plots.ipynb  05-work-with-images.ipynb  06-3d-plotting.ipynb  06-animation-interaction.ipynb
code/matplotlib/projects/: iris.ipynb
codes/: 01_introduction.ipynb  04_subplots.ipynb  05_work-with-images.ipynb
