[project]
name = "data-visualization-workshop"
version = "0.1.0"
description = "A comprehensive guide to data visualization from basic plotting techniques to advanced customization. This workshop helps you tell effective data stories in data science and analysis"
authors = [
    { name = "Amirhossein Heydari", email = "AmirhosseinHeydari78@gmail.com" },
]
maintainers = [
    { name = "Amirhossein Heydari", email = "AmirhosseinHeydari78@gmail.com" },
]
keywords = ["matplotlib", "seaborn", "plotly", "data visualization"]
readme = "README.md"
license = "Apache-2.0"
license-files = [
    "LICENSE",
    "assets/images/original/LICENSE"
]
requires-python = ">=3.13.7"
dependencies = [
    "matplotlib>=3.10.6,<4.0.0",
    "numpy>=2.3.3,<3.0.0",
    "pandas>=2.3.3,<3.0.0",
    "plotly>=6.3.1,<7.0.0",
    "seaborn>=0.13.2,<1.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1,<7.0.0",
    # "ipywidgets>=8.1.7,<9.0.0",
]

[project.urls]
Repository = "https://github.com/mr-pylin/data-visualization-workshop"
MyHomepage = "https://mr-pylin.github.io"

[tool.black]
line-length = 120
